<resources>
    <string name="app_name">Stundenplan 24</string>
    <string name="baseurl">https://vpman.146programming.de</string>
    <string name="mainActionBarTitle">Einstellung</string>
    <string name="close">Schließen</string>
    <string name="edit">Bearbeiten</string>
    <string name="save">Speichern</string>
    <string name="fach">Fach</string>
    <string name="raum">Raum</string>
    <string name="lehrer">Lehrer</string>
    <string name="klasse">Klasse/Kurs</string>

    <string-array
        name="weekdays">
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
    </string-array>
</resources>
